--- a/sunshinewatch/src/main/res/values/colors.xml
+++ b/sunshinewatch/src/main/res/values/colors.xml
@@ -1,2 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="background">#000000</color>
+    <color name="time_text">#ffffff</color>
+
+    <!-- watch colors same from mobile app-->
+
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorAccent">#FFD740</color>
+    <color name="colorPrimaryLight">#B3E5FC</color>
+
+
+
+</resources>
